styling create-account-page and adding contact-us-page-feature

--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -16,21 +16,21 @@
 
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com"/>
 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"/>
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com"/>
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet"/>
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com"/>
 
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet"/>
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com"/>
 
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet"/>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,6 +43,7 @@
     <link rel='stylesheet' href='style/style.css'>
     <link rel="stylesheet" href="style/style.scss">
     <link rel="stylesheet" href="style/style-responsive.scss">
+    <link rel="stylesheet" href="style/header-faq-style.scss">
 
 </head>
 
@@ -54,31 +55,33 @@
 
     <div class="nav-bar-container">
 
-    <nav class="nav-bar">
+        <nav class="nav-bar">
 
-        <div class="page-heading">
+            <div class="page-heading">
 
-            <h2><span>Tech</span> Website</h2>
+                <h2><span>Tech</span> Website</h2>
 
-        </div>
+            </div>
 
-        <ul class="nav-bar-list">
+            <ul class="nav-bar-list">
 
-            <li><a class="button" href='#'>Home</a></li>
+                <li><a class="button" href='#'>Home</a></li>
 
-            <li><a class="button" href='#plans-section'>Plans</a></li>
+                <li><a class="button" href='#plans-section'>Plans</a></li>
 
-            <li><a class="button" href='#features-section'>Features</a></li>
+                <li><a class="button" href='#features-section'>Features</a></li>
 
-            <li><a class="button" href='#accessibility-section'>Accessibility</a></li>
+                <li><a class="button" href='#accessibility-section'>Accessibility</a></li>
 
-            <li><a class="button" href='#feedback-section'>Feedback</a></li>
+                <li><a class="button" href='#feedback-section'>Feedback</a></li>
 
-            <li><button class="contact-us-button"><a class="button" href='#'>Contact Us</a></button></li>
+                <li>
+                    <button class="contact-us-button"><a class="button" href='#'>Contact Us</a></button>
+                </li>
 
-        </ul>
+            </ul>
 
-    </nav>
+        </nav>
 
     </div>
 
@@ -114,54 +117,6 @@
 
     </div>
 
-    <div class="contact-us-div">
-
-        <div class="contact-us-heading-div">
-
-            <h2><span>CONTACT<br></span>US</h2>
-
-        </div>
-
-        <form>
-
-            <input placeholder="Email-id" type="text"/>
-
-            <textarea rows="10" cols="47"></textarea>
-
-            <br>
-
-            <button>Submit</button>
-
-        </form>
-
-
-        <div class="contact-us-column-container">
-
-            <div class="contact-us-column">
-
-                <ion-icon name="location-outline"></ion-icon>
-
-                <p>ADDRESS : Route de la Galaise 32,
-                    1228 Plan-les-Ouates Geneva, Switzerland </p>
-
-            </div>
-            <div class="contact-us-column">
-                <ion-icon name="call-outline"></ion-icon>
-
-                <p>Phone No : 923562123 </p>
-
-            </div>
-            <div class="contact-us-column">
-                <ion-icon name="mail-outline"></ion-icon>
-
-                <p>Email-id : techwebsite@gmail.com</p>
-
-            </div>
-
-        </div>
-
-    </div>
-
     <div class="headings-container">
 
         <h2>Our Service</h2>
@@ -171,6 +126,55 @@
     </div>
 
 </header>
+
+
+<div class="contact-us-div">
+
+    <div class="contact-us-heading-div">
+
+        <h2><span>CONTACT<br></span>US</h2>
+
+    </div>
+
+    <form>
+
+        <input placeholder="Email-id" type="text"/>
+
+        <textarea rows="10" cols="47"></textarea>
+
+        <br>
+
+        <button>Submit</button>
+
+    </form>
+
+
+    <div class="contact-us-column-container">
+
+        <div class="contact-us-column">
+
+            <ion-icon name="location-outline"></ion-icon>
+
+            <p>ADDRESS : Route de la Galaise 32,
+                1228 Plan-les-Ouates Geneva, Switzerland </p>
+
+        </div>
+        <div class="contact-us-column">
+            <ion-icon name="call-outline"></ion-icon>
+
+            <p>Phone No : 923562123 </p>
+
+        </div>
+        <div class="contact-us-column">
+            <ion-icon name="mail-outline"></ion-icon>
+
+            <p>Email-id : techwebsite@gmail.com</p>
+
+        </div>
+
+    </div>
+
+</div>
 
 <div class="service-section">
 
@@ -467,7 +471,8 @@
 
         <img src="images/website-images/52611.png"/>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sapien velit, convallis ac fringilla ut, iaculis quis elit.<br>Curabitur velit lectus, porta ac libero a, semper ornare.  </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sapien velit, convallis ac fringilla ut,
+            iaculis quis elit.<br>Curabitur velit lectus, porta ac libero a, semper ornare. </p>
 
     </div>
     <br>
@@ -534,7 +539,8 @@
 
             <img src="images/customer-images/customer-1.jpg"/>
             <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut tristique enim. Aliquam erat volutpat. Aenean tempus auctor dignissim.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut tristique enim. Aliquam erat
+                volutpat. Aenean tempus auctor dignissim.</p>
 
             <div class="icons-container">
 
@@ -556,7 +562,8 @@
 
             <img src="images/customer-images/customer-2.jpg"/>
             <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut tristique enim. Aliquam erat volutpat. Aenean tempus auctor dignissim.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut tristique enim. Aliquam erat
+                volutpat. Aenean tempus auctor dignissim.</p>
 
             <div class="icons-container">
 
@@ -578,7 +585,8 @@
 
             <img src="images/customer-images/customer-3.jpg"/>
             <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut tristique enim. Aliquam erat volutpat. Aenean tempus auctor dignissim.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut tristique enim. Aliquam erat
+                volutpat. Aenean tempus auctor dignissim.</p>
 
             <div class="icons-container">
 
@@ -604,57 +612,58 @@
 
     <div class="footer-div">
 
-    <table>
+        <table>
 
-        <tr>
-            <th>PLATFORM</th>
-            <th>SOCIAL</th>
-            <th>HELP</th>
-        </tr>
+            <tr>
+                <th>PLATFORM</th>
+                <th>SOCIAL</th>
+                <th>HELP</th>
+            </tr>
 
-        <tr>
+            <tr>
 
-            <td><a href="#">Windows</a></td>
-            <td><a href="#">Facebook</a></td>
-            <td><a href="#">FAQ</a></td>
-        </tr>
+                <td><a href="#">Windows</a></td>
+                <td><a href="#">Facebook</a></td>
+                <td><a href="faq.html">FAQ</a></td>
+            </tr>
 
-        <tr>
-            <td><a href="#">MAC</a></td>
-            <td><a href="#">Instagram</a></td>
-            <td><a href="#">Contact Us</a></td>
-        </tr>
+            <tr>
+                <td><a href="#">MAC</a></td>
+                <td><a href="#">Instagram</a></td>
+                <td><a href="#">Contact Us</a></td>
+            </tr>
 
-        <tr>
-            <td><a href="#">Android</a></td>
-            <td><a href="#">Twitter</a></td>
-            <td><a href="#">Privacy</a></td>
+            <tr>
+                <td><a href="#">Android</a></td>
+                <td><a href="#">Twitter</a></td>
+                <td><a href="#">Privacy</a></td>
 
-        </tr>
+            </tr>
 
-        <tr>
-            <td><a href="#">IOS</a></td>
-            <td><a href="#">Reddit</a></td>
-            <td><a href="#">Terms and policy</a></td>
-        </tr>
+            <tr>
+                <td><a href="#">IOS</a></td>
+                <td><a href="#">Reddit</a></td>
+                <td><a href="#">Terms and policy</a></td>
+            </tr>
 
-    </table>
+        </table>
 
-    <div class="address-div">
+        <div class="address-div">
 
-        <address>ADDRESS : Route de la Galaise 32,<br>
-        1228 Plan-les-Ouates
-            Geneva, Switzerland</address>
+            <address>ADDRESS : Route de la Galaise 32,<br>
+                1228 Plan-les-Ouates
+                Geneva, Switzerland
+            </address>
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2763.116907549066!2d6.1006912154319615!3d46.168328479115644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c7b71017d334b%3A0x75c9bcd8154403ee!2sRte%20de%20la%20Galaise%2032%2C%201228%20Plan-les-Ouates%2C%20Switzerland!5e0!3m2!1sen!2sin!4v1632080672404!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2763.116907549066!2d6.1006912154319615!3d46.168328479115644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c7b71017d334b%3A0x75c9bcd8154403ee!2sRte%20de%20la%20Galaise%2032%2C%201228%20Plan-les-Ouates%2C%20Switzerland!5e0!3m2!1sen!2sin!4v1632080672404!5m2!1sen!2sin"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
-    </div>
+        </div>
 
         <p>Copyright © 2015 by Tech Website. All rights reserved.</p>
     </div>
 </footer>
 
-<script src="js/sign-up-script.js"></script>
 
 <script src="js/contact-us-page.js"></script>
 
