adding animation feature

--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -3,6 +3,8 @@
 
 <head>
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -111,7 +113,7 @@
 
         <div class="header-img-div">
 
-            <img src="images/icon-images/verified.png">
+            <img class="header-img" src="images/icon-images/verified.png">
 
         </div>
 
@@ -128,7 +130,7 @@
 </header>
 
 
-<div class="contact-us-div">
+<div  class="contact-us-div">
 
     <div class="contact-us-heading-div">
 
@@ -204,7 +206,7 @@
 
 </div>
 
-<section id="plans-section" class="plans-section">
+<section data-aos="fade-in" id="plans-section" class="plans-section">
 
     <div class="headings-container">
 
@@ -258,7 +260,7 @@
 
         </div>
 
-        <div class="plans-div">
+        <div class="plans-div one">
 
             <h2>Plan B</h2>
 
@@ -664,12 +666,17 @@
     </div>
 </footer>
 
+<script src="js/animation.js"></script>
+
+<script src="js/sign-up-script.js"></script>
 
 <script src="js/contact-us-page.js"></script>
 
 <script src="js/navigation-bar-button.js"></script>
 
 <script src="js/top-button-script.js"></script>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </body>
 
