updating-dark-mode-styling

--- a/food-website/index.html
+++ b/food-website/index.html
@@ -149,16 +149,7 @@
 
         <div class='service-icon-heading-column'>
 
-            <img class='icon-images' src='icon-images/thumb.png'>
-
-            <h1>Best Service</h1>
-
-        </div>
-
-
-        <div class='service-icon-heading-column'>
-
-            <img class='icon-images' src='icon-images/thumb.png'>
+            <ion-icon name="checkmark-circle-outline"></ion-icon>
 
             <h1>Best Service</h1>
 
@@ -166,7 +157,15 @@
 
         <div class='service-icon-heading-column'>
 
-            <img class='icon-images' src='icon-images/thumb.png'>
+            <ion-icon name="checkmark-circle-outline"></ion-icon>
+
+            <h1>Best Service</h1>
+
+        </div>
+
+        <div class='service-icon-heading-column'>
+
+            <ion-icon name="checkmark-circle-outline"></ion-icon>
 
             <h1>Best Service</h1>
         </div>
@@ -300,7 +299,7 @@
             </div>
             <br>
             <br>
-            <a class="orange-button" href='#'>Buy Now ( $399 / <span>month</span> )</a>
+            <a class="primary-button" href='#'>Buy Now ( $399 / <span>month</span> )</a>
 
         </div>
 
@@ -338,7 +337,7 @@
             </div>
             <br>
             <br>
-            <a class="orange-button" href='#'>Buy Now ( $399 / <span>month</span> )</a>
+            <a class="primary-button" href='#'>Buy Now ( $399 / <span>month</span> )</a>
 
         </div>
 
@@ -375,14 +374,14 @@
             </div>
             <br>
             <br>
-            <a class="orange-button" href='#'>Buy Now ( $399 / <span>month</span> )</a>
+            <a class="primary-button" href='#'>Buy Now ( $399 / <span>month</span> )</a>
 
         </div>
 
     </div>
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill=" rgb(256, 256, 256)" fill-opacity="1"
+        <path fill=" rgb(232, 49, 0)" fill-opacity="1"
               d="M0,224L48,197.3C96,171,192,117,288,128C384,139,480,213,576,208C672,203,768,117,864,106.7C960,96,1056,160,1152,160C1248,160,1344,96,1392,64L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
     </svg>
 </section>
@@ -480,7 +479,7 @@
     <br>
     <div class="view-feedback-div">
 
-        <button class="orange-button view-feedback-button">View All Feedback</button>
+        <button class="primary-button view-feedback-button">View All Feedback</button>
 
     </div>
 
@@ -625,7 +624,7 @@
 
             <textarea value='Write Down your Problem'></textarea>
 
-            <button class="orange-button">Submit</button>
+            <button class="primary-button">Submit</button>
 
         </form>
 
@@ -666,13 +665,8 @@
 
 </section>
 
-<div class='customer-service-button-div'>
+<ion-icon class='customer-service-icon' name="chatbox-ellipses-outline"></ion-icon>
 
-    <button class='customer-service-button'>
-        <ion-icon class='customer-service-icon' name="chatbox-ellipses-outline"></ion-icon>
-    </button>
-
-</div>
 
 <div class='change-theme-button-div'>
 
@@ -717,8 +711,6 @@
 <script src="js/feedback-box-script.js"></script>
 
 <script src="js/customer-service-button.js"></script>
-
-<script src="js/contact-us.js"></script>
 
 <script src="js/mobile-navigation-bar.js"></script>
 
