--- a/food-website/index.html
+++ b/food-website/index.html
@@ -54,9 +54,9 @@
 
         </div>
 
-        <nav>
+        <nav class="nav-bar">
 
-            <ul class='navigation-bar'>
+            <ul >
 
                 <li><a href="header-section">Home</a></li>
 
@@ -81,7 +81,6 @@
 
     </div>
 
-    <div class='nav-bar-container'></div>
 
     <div class='log-in-box-container'></div>
 
@@ -665,15 +664,16 @@
 
 </section>
 
-<ion-icon class='customer-service-icon' name="chatbox-ellipses-outline"></ion-icon>
 
+<div class="bottom-icons-row">
 
-<div class='change-theme-button-div'>
+        <ion-icon class='customer-service-icon' name="chatbox-ellipses-outline"></ion-icon>
 
-    <button class='change-theme-button'>
         <ion-icon class='change-theme-icon' name="moon-outline"></ion-icon>
-    </button>
+</div>
+<div class="bottom-icons-row">
 
+         <ion-icon class='top-button-icon' name="arrow-up-outline"></ion-icon>
 </div>
 <footer>
 
@@ -704,15 +704,17 @@
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
+<script src="js/mobile-navigation-bar.js"></script>
+
 <script src="js/theme-button.js"></script>
+
+<script src="js/top-button-script.js"></script>
 
 <script src="js/log-in-box-script.js"></script>
 
 <script src="js/feedback-box-script.js"></script>
 
 <script src="js/customer-service-button.js"></script>
-
-<script src="js/mobile-navigation-bar.js"></script>
 
 </body>
 
