updating food-website-mobile-log-in-box

--- a/food-website/index.html
+++ b/food-website/index.html
@@ -668,7 +668,11 @@
 
     <ion-icon class='customer-service-icon' name="chatbox-ellipses-outline"></ion-icon>
 
+    <button class="change-theme-icon-button">
+
     <ion-icon class='change-theme-icon' name="moon-outline"></ion-icon>
+    </button>
+
 </div>
 <div class="bottom-icons-row">
 
@@ -703,7 +707,7 @@
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-<script src="js/animationZ.js"></script>
+<script src="js/animation.js"></script>
 
 <script src="js/mobile-navigation-bar.js"></script>
 
