--- a/travel-website/index.html
+++ b/travel-website/index.html
@@ -137,15 +137,72 @@
 
     <div class="heading-div">
 
-    <h2>Our Service</h2>
+        <h2>Our Service</h2>
 
         <div class="line"></div>
 
     </div>
 
+    <div class="service-box-container">
+
+        <div class="service-section-box">
+
+            <img src="images/pexels-pok-rie-3233371.jpg"/>
+
+            <h3>Loreum Ipsum</h3>
+
+        </div>
+
+        <div class="service-section-box">
+
+            <img src="images/pexels-pok-rie-3233371.jpg"/>
+
+            <h3>Loreum Ipsum</h3>
+
+        </div>
+        <div class="service-section-box">
+
+            <img src="images/pexels-pok-rie-3233371.jpg"/>
+
+            <h3>Loreum Ipsum</h3>
+
+        </div>
+
+    </div>
+
+    <br>
 
 </section>
 
+<section class="testimonials-section">
+
+    <div class="heading-div">
+
+        <h2>Testimonials</h2>
+
+        <div class="line"></div>
+
+    </div>
+
+    <br>
+
+    <div class="testimonials-box-container">
+
+        <div class="testimonials-box">
+
+        </div>
+
+
+        <div class="testimonials-box">
+
+        </div>
+        <div class="testimonials-box">
+
+        </div>
+
+    </div>
+
+</section>
 
 </body>
 </html>
