--- a/food-website/index.html
+++ b/food-website/index.html
@@ -31,7 +31,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Website</title>
+    <title></title>
 
 <body>
 
